Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47887

Application hangs in QDashStroker::processCurrentSubpath

XMLWordPrintable

    • 8f8267f00bfa0d1716e38358ecc0fafff1d9df14 (qt/qtbase/5.12) f184f8780fef920006cf71e38b1477fe975bc3b1 (qt/qtbase/5.9)

      My application hangs unreproducibly in QDashStroker::processCurrentSubpath

      I managed to capture a stacktrace and stepped through the code to dump the pattern of lines that are repeated in the code. See attachments.

      The particular backtrace was captured on a Fedora 21 system, however, I experienced similar hangs (without the possibility to debug them) on an Ubuntu 12.04 machine (with Qt 5.4 installed).

      Edit:
      As described below, I've narrowed down the problem: Drawing a Qt::DashLine with 1.5 width to a point with an "Infinity" in its coordinates causes the hang. See qt-qstroker-bug.tar.bz2 for a MWE.

        1. qt_stroker_backtrace.txt
          7 kB
        2. qt_stroker_pattern.txt
          1 kB
        3. qt_stroker_data.txt
          19 kB
        4. qt_stroker_data_vis.png
          qt_stroker_data_vis.png
          127 kB
        5. qt-qstroker-bug.tar.bz2
          1 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vgt Eirik Aavitsland
            astoecke Andreas Stöckel
            Votes:
            3 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes