Avoid hanging on painting dashed lines with non-finite coordinates

The dash stroker did not check for inf/nan coordinates.

Fixes: QTBUG-47887
Change-Id: I1e696cd15cc37d8fcb6a464cac3da33c3a8b95c2
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 8f8267f00bfa0d1716e38358ecc0fafff1d9df14)